<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020 Baptiste Candellier
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<resources>

    <string name="grid_entity_hidden_message">Made %1$s hidden</string>
    <string name="grid_entity_visible_message">Made %1$s visible</string>
    <string name="grid_nocontent_label">Something happened.</string>
    <string name="grid_nocontent_retry">Retry</string>

    <string name="pref_author_summary">Licensed under the Apache License, Version 2.0.</string>
    <string name="pref_author_title">Created by Baptiste Candellier</string>

    <string name="pref_enable_crash_reporting_summary">Helps me a lot to fix and improve the app.</string>
    <string name="pref_enable_crash_reporting_title">Enable crash reporting</string>
    <string name="pref_help_shortcuts_title">Setup quick access</string>
    <string name="pref_help_shortcuts_summary">Find out how to access Home Slide even more quickly, from anywhere on your device.</string>
    <string name="pref_legal_title">Awesome Software We Use</string>
    <string-array name="pref_oss_apache2_summary">
        <item>square/retrofit</item>
        <item>square/moshi</item>
        <item>square/okhttp</item>
        <item>Faltenreich/SkeletonLayout</item>
    </string-array>
    <string name="pref_oss_apache2_title">Apache 2.0 License</string>
    <string-array name="pref_oss_ccby_summary">
        <item>\"Home Page\" by Freepik from www.flaticon.com</item>
        <item>\"Halloween Black Cat\" by Freepik from www.flaticon.com</item>
    </string-array>
    <string name="pref_oss_ccby_title">Creative Commons BY 3.0</string>
    <string-array name="pref_oss_ccbyncsa4_summary">
        <item>home-assistant/home-assistant-assets</item>
    </string-array>
    <string name="pref_oss_ccbyncsa4_title">Creative Commons BY-NC-SA 4.0</string>
    <string-array name="pref_oss_isc_summary">
        <item>DanielMartinus/Konfetti</item>
    </string-array>
    <string name="pref_oss_isc_title">ISC License</string>
    <string-array name="pref_oss_mit_summary">
    </string-array>
    <string name="pref_oss_mit_title">MIT License</string>
    <string-array name="pref_oss_ofl_summary">
        <item>Templarian/MaterialDesign</item>
    </string-array>
    <string name="pref_oss_ofl_title">SIL Open Font License</string>

    <string name="pref_repo_summary">Check out the repository for support and to contribute to the project!</string>
    <string name="pref_repo_title" translatable="false">outadoc/home-slide-android</string>

    <string name="title_about">About</string>
    <string name="pref_version_summary">Version %1$s</string>

</resources>