<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/pref_about_title">
        <Preference
            app:icon="@drawable/ic_home"
            app:key="pref_about_version"
            app:title="@string/app_name" />

        <Preference
            app:key="pref_about_author"
            app:summary="@string/pref_author_summary"
            app:title="@string/pref_author_title" />

        <SwitchPreference
            app:defaultValue="true"
            app:icon="@drawable/ic_analytics"
            app:key="chk_pref_enable_crash_reporting"
            app:summary="@string/pref_enable_crash_reporting_summary"
            app:title="@string/pref_enable_crash_reporting_title" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_legal_title">
        <Preference
            app:key="pref_oss_apache2"
            app:title="@string/pref_oss_apache2_title" />

        <Preference
            app:key="pref_oss_mit"
            app:title="@string/pref_oss_mit_title" />

        <Preference
            app:key="pref_oss_isc"
            app:title="@string/pref_oss_isc_title" />

        <Preference
            app:key="pref_oss_ofl"
            app:title="@string/pref_oss_ofl_title" />

        <Preference
            app:key="pref_oss_ccby"
            app:title="@string/pref_oss_ccby_title" />

        <Preference
            app:key="pref_oss_ccbyncsa4"
            app:title="@string/pref_oss_ccbyncsa4_title" />
    </PreferenceCategory>
</PreferenceScreen>